# Edge_AI

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  LICENSE  MODULE.bazel  README.md  python_requirements_3_11.txt  python_requirements_3_11_lock.txt
demo_applications/anomaly_detection/: BUILD.bazel  anomaly_detection.tflite  anomaly_detection_quantized.cc  anomaly_detection_quantized.h  anomaly_detection_tests.cc  netron.sh  train.py
demo_applications/object_recognition/application/: BUILD.bazel
demo_applications/object_recognition/application/api/: application_constants.h  file_input_handler.h  ml_model_resolver.h  print_logger.h  yolov8_visualizer.h
demo_applications/object_recognition/application/src/: file_input_handler.cc  main_file_input.cc  ml_model_resolver_bazel.cc  yolov8_visualizer.cc
docs/: BUILD.bazel  conf.py  index.rst  requirements_sphinx_3_11.txt  requirements_sphinx_3_11_lock.txt
docs/arch42_template/: arch42_template.rst
docs/arch42_template/architecture/: 10_quality.rst  11_risk_and_technical_debt.rst  12_traceability_matrix.rst  1_introduction_and_goals.rst  2_constraints.rst  3_context_and_scope.rst  4_solution_strategy.rst  5_building_block_view.rst  6_runtime_view.rst  7_deployment_view.rst  8_concepts.rst  9_architecture_decisions.rst
docs/src/: components.rst  conf copy.py  external_dependencies.rst  theory.rst  tools.rst
docs/src/components/: components.rst  examples.rst  modules.rst
docs/src/components/applications/: applications.rst
docs/src/components/applications/object_recognition/architecture/: 10_quality.rst  11_risk_and_technical_debt.rst  13_glossary.rst  1_introduction_and_goals.rst  4_solution_strategy.rst  5_building_block_view.rst  6_runtime_view.rst  8_concepts.rst  (+1 more)
docs/src/components/applications/simple_audio_recognition/: simple_audio_recognition.rst
docs/src/components/modules/: dsp_image_types.rst  miniaudio.rst  modules.rst  onnxruntime_engine.rst  rtlite_micro_handler.rst
docs/src/theory/: audio_recognition.rst  image_recognition.rst  theory.rst
learning/example/object_recognition/: BUILD.bazel
learning/example/object_recognition/application/: BUILD.bazel
learning/example/object_recognition/application/api/: CameraInputHandler.h  YOLOv8Visualizer.h  camera_input_handler.h  frame_handler.h  print_logger.h  yolov8_post_processor.h
learning/example/object_recognition/application/src/: CameraInputHandler.cc  FileInputHandler.cc  YOLOv8PostProcessor.cc  YOLOv8Visualizer.cc  camera_input_handler.cc  frame_handler.cc  main_camera_input.cc  main_file_input.cc  ml_model_resolver_bazel.cc  yolov8_post_processor.cc
learning/example/object_recognition/docs/: object_recognition.rst
learning/example/object_recognition/docs/architecture/: 10_quality.rst  12_traceability_matrix.rst  13_glossary.rst  1_introduction_and_goals.rst  2_constraints.rst  3_context_and_scope.rst  4_solution_strategy.rst  6_runtime_view.rst  7_deployment_view.rst  8_concepts.rst  9_architecture_decisions.rst
learning/example/object_recognition/docs/performance_measurements/: perf_measurements.rst
learning/example/object_recognition/quantization/: BUILD.bazel  inspect_model.py  onnxruntime_quantization.py  quantize_model.py  ultralytics_quantization.py
learning/example/object_recognition/quantization/quantized_model/: yolov8_int8.tflite
learning/example/simple_audio_recognition/: BUILD.bazel
learning/example/simple_audio_recognition/application/: BUILD.bazel  copy_model.sh
learning/example/simple_audio_recognition/application/api/: audio_model_pipeline.h  get_label_names.h  sample_processing_from_file.h  sample_processing_from_mic.h
learning/example/simple_audio_recognition/application/src/: audio_model_pipeline.cc  get_label_names.cc  main.cc  main_file_input.cc  main_mic_input.cc  sample_processing_from_file.cc  sample_processing_from_mic.cc
learning/example/simple_audio_recognition/application/tflite_model/: audio_recognition_model.tflite
learning/example/simple_audio_recognition/docs/: simple_audio_recognition.rst  simple_audio_recognition_application.rst  simple_audio_recognition_training.rst
learning/example/simple_audio_recognition/docs/diagrams/: model.puml
learning/example/simple_audio_recognition/train/: BUILD.bazel  audio_processing.py  convert_to_tflite.py  inspect_tflite.py  run_inference_keras.py  run_inference_tflite.py  sample_processing.py  train.py
modules/common_types/: BUILD.bazel  common_types.h
modules/common_types/docs/: common_types.rst
modules/convert_to_tflite/: BUILD.bazel  tflite_convertor.py
modules/digital_signal_processing/audio/miniaudio/: BUILD.bazel
modules/digital_signal_processing/image/: BUILD.bazel
modules/digital_signal_processing/image/api/: CPULetterboxPreprocessor.h  IImagePreprocessor.h  ITensorPacker.h  LetterboxPreprocessor.h  PlanarScaleTensorPacker.h  camera_config.h  camera_input_concept.h  dip_data_types.h  image_preprocessor_concept.h  letterbox_preprocessor.h  planar_scale_tensor_packer.h  tensor_packer_concept.h  video_pipeline.h
modules/digital_signal_processing/image/docs/: dsp_image_types.rst
modules/digital_signal_processing/image/src/: CPULetterboxPreprocessor.cc  LetterboxPreprocessor.cc  PlanarScaleTensorPacker.cc  PlanarScaleTensorPackerYOLOv8.cc
modules/machine_learning/: BUILD.bazel
modules/machine_learning/api/: ml_engine_concept.h  ml_types.h  onnxruntime_engine.h
modules/machine_learning/src/: onnxruntime_engine.cc
modules/onnxruntime/: BUILD.bazel
modules/onnxruntime/api/: ONNXRuntimeEngine.h
modules/onnxruntime/src/: ONNXRuntimeEngine.cc
modules/onnxruntime_engine/: BUILD.bazel
modules/onnxruntime_engine/api/: ONNXRuntimeEngine.h
modules/onnxruntime_engine/docs/: onnxruntime_engine.rst
modules/onnxruntime_engine/src/: ONNXRuntimeEngine.cc
modules/tflite_model_handler/: BUILD.bazel
modules/tflite_model_handler/api/: rtlite_micro_handler.h  tflite_model_handler.h
modules/tflite_model_handler/docs/: rtlite_micro_handler.rst  tflite_model_handler.rst
modules/tracy_profiler/: BUILD.bazel  TracyProfiler.h
(+46 files in other folders)
