load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "int_flag")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "requirements_tfcore",
    src = "python_requirements_3_11.txt",
    requirements_txt = "python_requirements_3_11_lock.txt",
)

compile_pip_requirements(
    name = "requirements_sphinx",
    src = "//docs:requirements_sphinx_3_11.txt",
    requirements_txt = "//docs:requirements_sphinx_3_11_lock.txt",
)

# Define the user flag
bool_flag(
    name = "tracy_profiler_enabled",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

int_flag(
    name = "optimization_level",
    build_setting_default = 1,
    visibility = ["//visibility:public"],
)

int_flag(
    name = "print_logger_level",
    build_setting_default = 0,
    visibility = ["//visibility:public"],
)

# Define the valid select condition
config_setting(
    name = "tracy_profiler_active",
    flag_values = {
        ":tracy_profiler_enabled": "True",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "print_logger_errors_active",
    flag_values = {
        ":print_logger_level": "1",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "print_logger_all_active",
    flag_values = {
        ":print_logger_level": "2",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "optimization_level_0",
    flag_values = {
        ":optimization_level": "0",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "optimization_level_1",
    flag_values = {
        ":optimization_level": "1",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "optimization_level_2",
    flag_values = {
        ":optimization_level": "2",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "optimization_level_3",
    flag_values = {
        ":optimization_level": "3",
    },
    visibility = ["//visibility:public"],
)
