load("@rules_cc//cc:defs.bzl", "cc_library")
load(
    "@sphinxdocs//sphinxdocs:sphinx_docs_library.bzl",
    "sphinx_docs_library",
)

############################ Library Definitions #################################

cc_library(
    name = "common_types",
    srcs = [
        "common_types.h",
    ],
    hdrs = [
        "common_types.h",
    ],
    includes = [
        ".",
    ],
    visibility = ["//visibility:public"],
)

############################ Documentation Definitions ###########################

filegroup(
    name = "common_types_doxygen_srcs",
    srcs = glob(
        [
            "*.h",
        ],
    ),
    visibility = ["//docs:__subpackages__"],
)

sphinx_docs_library(
    name = "common_types_docs",
    srcs = glob(["docs/*.rst"]),
    visibility = ["//docs:__subpackages__"],
)
