load("@rules_cc//cc:defs.bzl", "cc_library")
############################ Library Definitions #################################

cc_library(
    name = "common_types",
    srcs = [
        "common_types.h",
    ],
    hdrs = [
        "common_types.h",
    ],
    includes = [
        ".",
    ],
    visibility = ["//visibility:public"],
)

############################ Documentation Definitions ###########################

filegroup(
    name = "doxygen_srcs",
    srcs = glob(
        [
            "*.h",
        ],
    ),
    visibility = ["//docs:__subpackages__"],
)
