load("@pip_deps_tfcore//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "tflite_convertor",
    srcs = ["tflite_convertor.py"],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        requirement("tensorflow"),
    ],
)
