load("@rules_cc//cc:defs.bzl", "cc_library")
load(
    "@sphinxdocs//sphinxdocs:sphinx_docs_library.bzl",
    "sphinx_docs_library",
)

########################### Library Definitions #################################

cc_library(
    name = "onnxruntime_engine",
    srcs = [
        "src/onnxruntime_engine.cc",
    ],
    hdrs = [
        "api/onnxruntime_engine.h",
    ],
    includes = [
        "api",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":ml_types",
        "@onnxruntime_mac_arm64//:onnxruntime_c",
    ],
)

cc_library(
    name = "ml_types",
    hdrs = [
        "api/ml_types.h",
    ],
    includes = [
        "api",
    ],
    visibility = ["//visibility:public"],
    deps = [
    ],
)

cc_library(
    name = "inference_engine_concept",
    hdrs = [
        "api/ml_engine_concept.h",
    ],
    includes = [
        "api",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":ml_types",
    ],
)

########################### Documentation Definitions ###########################

sphinx_docs_library(
    name = "docs_srcs",
    srcs = glob(["docs/*.rst"]),
    visibility = ["//docs:__subpackages__"],
)

filegroup(
    name = "doxygen_srcs",
    srcs = ["api/onnxruntime_engine.h"],
    visibility = ["//docs:__subpackages__"],
)
