load("@rules_cc//cc:defs.bzl", "cc_library")
########################## Library Definitions #################################

cc_library(
    name = "rtlite_micro_handler",
    srcs = [
        "api/rtlite_micro_handler.h",
    ],
    hdrs = [
        "api/rtlite_micro_handler.h",
    ],
    includes = [
        "api",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@tflm//tensorflow/lite/micro:micro_framework",
    ],
)

cc_library(
    name = "ml_types",
    srcs = [
        "api/ml_types.h",
    ],
    hdrs = [
        "api/ml_types.h",
    ],
    includes = [
        "api",
    ],
    visibility = ["//visibility:public"],
)

########################## Documentation Definitions ###########################

filegroup(
    name = "rtlite_micro_handler_doxygen_srcs",
    srcs = glob(
        [
            "api/*.h",
        ],
    ),
    visibility = ["//docs:__subpackages__"],
)
