load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load(
    "@sphinxdocs//sphinxdocs:sphinx_docs_library.bzl",
    "sphinx_docs_library",
)

########################### Library Definitions #################################

cc_library(
    name = "file_input_handler",
    srcs = [
        "src/file_input_handler.cc",
    ],
    hdrs = [
        "api/file_input_handler.h",
    ],
    includes = [
        "api",
    ],
    strip_include_prefix = "api",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/cpp/runfiles",
        "@opencv",
    ],
)

cc_library(
    name = "yolov8_post_processor",
    srcs = [
        "src/yolov8_post_processor.cc",
    ],
    hdrs = [
        "api/yolov8_post_processor.h",
    ],
    includes = [
        "api",
    ],
    strip_include_prefix = "api",
    visibility = ["//visibility:public"],
    deps = [
        "//modules/digital_signal_processing/image:dip_data_types",
    ],
)

cc_library(
    name = "yolov8_visualizer",
    srcs = [
        "src/yolov8_visualizer.cc",
    ],
    hdrs = [
        "api/yolov8_visualizer.h",
    ],
    includes = [
        "api",
    ],
    strip_include_prefix = "api",
    visibility = ["//visibility:public"],
    deps = [
        ":yolov8_post_processor",
        "@opencv",
    ],
)

cc_library(
    name = "camera_input_handler",
    srcs = [
        "src/camera_input_handler.cc",
    ],
    hdrs = [
        "api/camera_input_handler.h",
    ],
    strip_include_prefix = "api",
    visibility = ["//visibility:public"],
    deps = [
        ":print_logger",
        "//modules/digital_signal_processing/image:dip_data_types",
        "@opencv",
    ],
)

cc_binary(
    name = "file_input_app",
    srcs = [
        "src/main_file_input.cc",
    ],
    data = [
        "//demo_applications/object_recognition:onnx_models",
        "@coco_val2017//:saved_images_dir",
    ],
    includes = [
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":file_input_handler",
        ":yolov8_post_processor",
        ":yolov8_visualizer",
        "//modules/digital_signal_processing/image:letterbox_preprocessor",
        "//modules/digital_signal_processing/image:planar_scale_tensor_packer",
        "//modules/machine_learning",
        "@opencv",
    ],
)

cc_library(
    name = "ml_model_resolver",
    srcs = [
        "src/ml_model_resolver_bazel.cc",
    ],
    hdrs = [
        "api/ml_model_resolver.h",
    ],
    includes = [
        "api",
    ],
    strip_include_prefix = "api",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_library(
    name = "print_logger",
    hdrs = [
        "api/print_logger.h",
    ],
    defines = select({
        "//:print_logger_errors_active": ["PRINT_LOGGER_ERROR_ENABLE"],
        "//:print_logger_all_active": ["PRINT_LOGGER_ENABLE"],
        "//conditions:default": [],
    }),
    includes = [
        "api",
    ],
    strip_include_prefix = "api",
    visibility = ["//visibility:public"],
    deps = [
    ],
)

cc_library(
    name = "frame_handler",
    srcs = [
        "src/frame_handler.cc",
    ],
    hdrs = [
        "api/frame_handler.h",
    ],
    includes = [
        "api",
    ],
    strip_include_prefix = "api",
    visibility = ["//visibility:public"],
    deps = [
        ":camera_input_handler",
        ":print_logger",
        "//modules/tracy_profiler",
        "@opencv",
    ],
)

cc_binary(
    name = "camera_input_app",
    srcs = [
        "api/application_constants.h",
        "src/main_camera_input.cc",
    ],
    copts = select({
        "//:tracy_profiler_active": [
            "-DTRACY_ENABLE",
            "-g",
        ],
        "//conditions:default": [],
    }),
    data = [
        "//demo_applications/object_recognition/quantization:onnx_models",
    ],
    includes = [
        "api",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":camera_input_handler",
        ":file_input_handler",
        ":frame_handler",
        ":ml_model_resolver",
        ":print_logger",
        ":yolov8_post_processor",
        ":yolov8_visualizer",
        "//modules/digital_signal_processing/image:letterbox_preprocessor",
        "//modules/digital_signal_processing/image:planar_scale_tensor_packer",
        "//modules/digital_signal_processing/image:video_pipeline",
        "//modules/machine_learning:onnxruntime_engine",
        "//modules/tracy_profiler",
        "@opencv",
    ],
)

############################ Documentation Definitions ###########################

filegroup(
    name = "doxygen_srcs",
    srcs = glob([
        "api/*.h",
        "src/*.cc",
    ]),
    visibility = ["//demo_applications/object_recognition:__subpackages__"],
)
