load("@pip_deps_tfcore//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")
load("//modules/helpers:defs.bzl", "inspect_model_macro")

inspect_model_macro(
    name = "inspect_model",
    model_target = ":quantization/quantized_model/yolov8_int8.tflite",
    visibility = ["//visibility:public"],
)

py_binary(
    name = "quantize_model",
    srcs = ["quantization/quantize_model.py"],
    args = [
        "--base_model=yolov8n_base_model/file/downloaded",
        "--calibration_images=coco_val2017/val2017/000000000139.jpg",
    ],
    data = [
        "@coco_val2017//:saved_images_dir",
        "@yolov8n_base_model//file",
    ],
    imports = ["."],
    main = "quantization/quantize_model.py",
    visibility = ["//visibility:public"],
    deps = [
        "@rules_python//python/runfiles",
        requirement("ultralytics"),
    ],
)
