load("@rules_cc//cc:defs.bzl", "cc_library")
load(
    "@sphinxdocs//sphinxdocs:sphinx_docs_library.bzl",
    "sphinx_docs_library",
)

########################### Library Definitions #################################

cc_library(
    name = "dip_data_types",
    srcs = [
        "api/dip_data_types.h",
    ],
    hdrs = [
        "api/dip_data_types.h",
    ],
    includes = [
        "api",
    ],
    visibility = ["//visibility:public"],
    deps = [
    ],
)

cc_library(
    name = "letterbox_preprocessor",
    hdrs = [
        "api/image_preprocessor_concept.h",
        "api/letterbox_preprocessor.h",
    ],
    includes = [
        "api",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":dip_data_types",
    ],
)

cc_library(
    name = "planar_scale_tensor_packer",
    srcs = [
        "src/PlanarScaleTensorPackerYOLOv8.cc",
    ],
    hdrs = [
        "api/ITensorPacker.h",
        "api/planar_scale_tensor_packer.h",
    ],
    includes = [
        "api",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":dip_data_types",
    ],
)

########################### Documentation Definitions ###########################

sphinx_docs_library(
    name = "docs_srcs",
    srcs = glob(["docs/*.rst"]),
    visibility = ["//docs:__subpackages__"],
)

filegroup(
    name = "doxygen_srcs",
    srcs = glob(
        [
            "**/*.h",
            "**/*.cc",
        ],
    ),
    visibility = ["//docs:__subpackages__"],
)
